@@ -1,3 +1,11 @@
+2009-11-04  Adam Roben  <aroben@apple.com>
+
+        Sort WebCore.base.exp
+
+        Rubber-stamped by Dan Bernstein.
+
+        * WebCore.base.exp: Sorted.
+
 2009-11-04  Csaba Osztrogonác  <ossy@webkit.org>
 
         Unreviewed rollout.
